--- a/8.5/jdk8-alpine/Dockerfile
+++ b/8.5/jdk8-alpine/Dockerfile
@@ -144,9 +144,11 @@ RUN apk add --no-cache tzdata ttf-dejavu unzip && \
 
 COPY server.xml          /usr/local/tomcat/conf/
 COPY context.xml.default /usr/local/tomcat/conf/Catalina/localhost/
+COPY dumb-init /usr/bin/
 
 ENV FC_LANG en-US                                                                                                    
 
 CMD ["catalina.sh", "run"]
 
 RUN rm -rf /usr/local/tomcat/webapps/*
+RUN chmod +x /usr/bin/dumb-init
