--- a/9/9-jdk15/Dockerfile
+++ b/9/9-jdk15/Dockerfile
@@ -8,12 +8,9 @@ COPY sources.list        /etc/apt/sources.list
 COPY server.xml          /usr/local/tomcat/conf/
 COPY context.xml.default /usr/local/tomcat/conf/Catalina/localhost/
 
-### for jdk11-adoptopenjdk serials & Aliyun Repository
-# RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 3B4FE6ACC0B21F32
-
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-        telnet tzdata unzip; \
+        telnet tzdata unzip dumb-init; \
     rm -rf /var/lib/apt/lists/*; \
     rm -rf /usr/local/tomcat/webapps.dist
 
