--- a/9/9-jdk17/9-jdk17-temurin-jammy/Dockerfile-jre
+++ b/9/9-jdk17/9-jdk17-temurin-jammy/Dockerfile-jre
@@ -32,4 +32,5 @@ ENV JDK_JAVA_OPTIONS="\
 --add-opens=java.desktop/java.awt.font=ALL-UNNAMED \
 --add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED \
 --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED \
---add-exports=java.base/sun.net.www=ALL-UNNAMED"
+--add-exports=java.base/sun.net.www=ALL-UNNAMED \
+--add-exports=java.base/sun.util.calendar=ALL-UNNAMED"
