--- a/9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile-jemalloc
+++ b/9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile-jemalloc
@@ -1,10 +1,10 @@
-FROM tomcat:9-jdk17-temurin-jammy
+FROM tomcat:9-jdk17-temurin-noble
 MAINTAINER Analyser, analyser@gmail.com
 
 ARG DEBIAN_FRONTEND=noninteractive
 ARG TZ=Asia/Shanghai
 
-#COPY sources.list        /etc/apt/sources.list
+# COPY sources.list        /etc/apt/sources.list
 COPY server.xml          /usr/local/tomcat/conf/
 COPY context.xml.default /usr/local/tomcat/conf/Catalina/localhost/
 
