--- a/9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile-jre-jemalloc
+++ b/9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile-jre-jemalloc
@@ -46,3 +46,6 @@ ENV JDK_JAVA_OPTIONS="\
 --add-exports=java.base/sun.net.www=ALL-UNNAMED \
 --add-exports=java.base/sun.util.calendar=ALL-UNNAMED"
 
+ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+
+CMD ["catalina.sh", "run"]
