--- a/9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile-jre-jemalloc
+++ b/9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile-jre-jemalloc
@@ -1,23 +1,21 @@
-FROM tomcat:9-jre17-temurin-noble
-MAINTAINER Analyser, analyser@gmail.com
+FROM tomcat:9-jre17
+LABEL maintainer="Analyser, analyser@gmail.com"
 
 ARG DEBIAN_FRONTEND=noninteractive
 ARG TZ=Asia/Shanghai
 
-# COPY sources.list        /etc/apt/sources.list
 COPY server.xml          /usr/local/tomcat/conf/
 COPY context.xml.default /usr/local/tomcat/conf/Catalina/localhost/
 
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-       telnet tzdata unzip dumb-init libjemalloc2 \
-    && ln -s /usr/lib/`(uname -m)`-linux-gnu /usr/lib/linux-gnu \
-    && rm -rf /var/lib/apt/lists/* \
-    && rm -rf /usr/local/tomcat/webapps.dist
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+       telnet tzdata unzip dumb-init libjemalloc2 && \
+    ln -s /usr/lib/`(uname -m)`-linux-gnu /usr/lib/linux-gnu && \
+    rm -rf /var/lib/apt/lists/* /usr/local/tomcat/webapps.dist
 
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
-    && echo $TZ > /etc/timezone \
-    && dpkg-reconfigure --frontend noninteractive tzdata
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
+    echo $TZ > /etc/timezone && \
+    dpkg-reconfigure --frontend noninteractive tzdata
 
 ENV LD_PRELOAD=/usr/lib/linux-gnu/libjemalloc.so.2
 
