--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,17 @@
 {
   "extends": [
     "config:base"
+  ],
+  "regexManagers": [
+    {
+      "fileMatch": ["^9/9-jdk17/Dockerfile-renovate$"],
+      "matchStrings": ["^FROM\\s+tomcat:(?<currentValue>9\\.[0-9]+\\.[0-9]+)-jdk17"],
+      "datasourceTemplate": "docker",
+      "versioningTemplate": "docker",
+      "allowedVersions": "9\\.[0-9]+\\.[0-9]+"
+    }
+  ],
+  "ignorePaths": [
+    "**/Dockerfile*"
   ]
 }
