--- a/renovate.json
+++ b/renovate.json
@@ -7,8 +7,7 @@
       "fileMatch": ["^9/9-jdk17/Dockerfile-renovate$"],
       "matchStrings": ["^FROM\\s+tomcat:(?<currentValue>9\\.[0-9]+\\.[0-9]+)-jdk17"],
       "datasourceTemplate": "docker",
-      "versioningTemplate": "docker",
-      "allowedVersions": "9\\.[0-9]+\\.[0-9]+"
+      "versioningTemplate": "docker"
     }
   ],
   "ignorePaths": [
