--- a/9/9-jdk17/Dockerfile-renovate
+++ b/9/9-jdk17/Dockerfile-renovate
@@ -1,5 +1,2 @@
-FROM tomcat:9.0.98-jdk17 AS tomcat
-LABEL maintainer="Analyser, analyser@gmail.com"
-
-FROM eclipse-temurin:17.0.14_7-jre AS jre
+FROM tomcat:9.0.98-jdk17
 LABEL maintainer="Analyser, analyser@gmail.com"
