--- a/.github/workflows/continuous-image-build-pipeline.yml
+++ b/.github/workflows/continuous-image-build-pipeline.yml
@@ -14,12 +14,16 @@ jobs:
         include:
           - dockerfile: "9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile"
             image_tags: "${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jdk17,${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jdk17-temurin,${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jdk17-temurin-ubuntu"
+            platforms: "linux/amd64,linux/arm64"
           - dockerfile: "9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile-jre"
             image_tags: "${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jre17,${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jre17-temurin,${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jre17-temurin-ubuntu"
+            platforms: "linux/amd64,linux/arm64"
           - dockerfile: "9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile-jemalloc"
             image_tags: "${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jdk17-jemalloc,${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jdk17-temurin-jemalloc,${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jdk17-temurin-ubuntu-jemalloc"
+            platforms: "linux/amd64"
           - dockerfile: "9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile-jre-jemalloc"
             image_tags: "${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jre17-jemalloc,${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jre17-temurin-jemalloc,${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jre17-temurin-ubuntu-jemalloc"
+            platforms: "linux/amd64"
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -43,6 +47,6 @@ jobs:
         with:
           context: ./9/9-jdk17/9-jdk17-temurin-ubuntu
           file: ${{ matrix.dockerfile }}
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ matrix.platforms }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ matrix.image_tags }}
