--- a/.github/workflows/continuous-image-build-pipeline.yml
+++ b/.github/workflows/continuous-image-build-pipeline.yml
@@ -4,7 +4,7 @@ on:
     branches: [ master ]
     tags:
       - "v*.*.*"
-  pull_request:
+  workflow_dispatch: # Add this section to enable manual triggering
 
 jobs:
   build:
