--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
     {
       "customType": "regex",
       "fileMatch": [
-        "^9/9-jdk17/Dockerfile-renovate$"
+        "^9/Dockerfile\\.renovate$"
       ],
       "matchStrings": [
         "^FROM\\s+(?<depName>tomcat):(?<currentValue>9\\.[0-9]+\\.[0-9]+)-jdk17"
@@ -14,5 +14,9 @@
       "datasourceTemplate": "docker",
       "versioningTemplate": "docker"
     }
+  ],
+  "ignorePaths": [
+    "9/**/Dockerfile-*",
+    "9/**/Dockerfile"
   ]
 }
