feat: enhance Tomcat configuration and add optimization scripts
- Enhance Tomcat connector with detailed performance tuning parameters
  - Optimize thread pool settings (maxThreads, minSpareThreads, etc.)
  - Configure connection and socket options for better performance
  - Add network timeout and keep-alive settings
- Add optimization and diagnostic scripts
  - node-net-optim-32c256g.sh: network optimization for 32C256G nodes
  - pod-role-diag.sh: pod role diagnostics
  - pod-role-diag-simp.sh: simplified pod role diagnostics
  - pod-role-optim.sh: pod role optimization
- Add network tools (net-tools, iproute2) to Dockerfile
- Copy scripts to /opt/scripts in container

--- a/9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile
+++ b/9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile
@@ -7,9 +7,13 @@ ARG TZ=Asia/Shanghai
 COPY server.xml          /usr/local/tomcat/conf/
 COPY context.xml.default /usr/local/tomcat/conf/Catalina/localhost/
 
+RUN mkdir -p /opt/scripts
+COPY scripts/*.sh /opt/scripts/
+RUN chmod +x /opt/scripts/*.sh
+
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-        telnet tzdata unzip dumb-init && \
+        telnet tzdata unzip dumb-init net-tools iproute2 && \
     rm -rf /var/lib/apt/lists/* /usr/local/tomcat/webapps.dist
 
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
