refactor: unify Dockerfile using ARG for base image
- Use ARG BASE_IMAGE to parameterize base image in Dockerfile
- Remove Dockerfile-jre and use unified Dockerfile for both JDK and JRE variants
- Update CI/CD pipeline to pass BASE_IMAGE via build-args
- Default BASE_IMAGE remains tomcat:9-jdk17 for backward compatibility

--- a/.github/workflows/continuous-image-build-pipeline.yml
+++ b/.github/workflows/continuous-image-build-pipeline.yml
@@ -13,9 +13,11 @@ jobs:
       matrix:
         include:
           - dockerfile: "9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile"
+            base_image: "tomcat:9-jdk17"
             image_tags: "${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jdk17,${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jdk17-temurin,${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jdk17-temurin-ubuntu"
             platforms: "linux/amd64,linux/arm64"
-          - dockerfile: "9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile-jre"
+          - dockerfile: "9/9-jdk17/9-jdk17-temurin-ubuntu/Dockerfile"
+            base_image: "tomcat:9-jre17"
             image_tags: "${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jre17,${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jre17-temurin,${{ vars.ALIBABA_CLOUD_CR_HOSTNAME }}/dianplus/tomcat:9-jre17-temurin-ubuntu"
             platforms: "linux/amd64,linux/arm64"
     steps:
@@ -41,6 +43,8 @@ jobs:
         with:
           context: ./9/9-jdk17/9-jdk17-temurin-ubuntu
           file: ${{ matrix.dockerfile }}
+          build-args: |
+            BASE_IMAGE=${{ matrix.base_image }}
           platforms: ${{ matrix.platforms }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ matrix.image_tags }}
